# openmemx

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  start.sh
.agent/skills/openmemx/: SKILL.md
.agent/workflows/: release.md
.github/workflows/: publish.yml  test.yml
doc/: Optimizing AI Agent Memory Research.txt
scripts/: release.sh
src/openmemx/: __init__.py  cli.py  core_logic.py  ingestion.py  mcp_server.py  memory_engine.py
tests/: test_auto_ingest.py  test_core.py  test_smoke.py
